--- a/Source/SmartHotel.Clients/SmartHotel.Clients/Views/HomeView.xaml
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/Views/HomeView.xaml
@@ -1,14 +1,16 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage 
     x:Name="Self"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="SmartHotel.Clients.Core.Views.HomeView"
+    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    ios:NavigationPage.IsNavigationBarTranslucent="True"
+    ios:Page.UseSafeArea="False"
+    ios:Page.SafeAreaInsets="0,0,0,0"
     xmlns:templates="clr-namespace:SmartHotel.Clients.Core.Views.Templates"
     xmlns:extensions="clr-namespace:SmartHotel.Clients.Core.MarkupExtensions"
     xmlns:microcharts="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
-    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-    ios:Page.UseSafeArea="False" 
     BackgroundColor="{StaticResource BackgroundColor}">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -128,8 +130,8 @@
         </ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <Grid IgnoreSafeArea="True">
-            <Grid   
+        <Grid Margin="0,-140,0,0">
+            <Grid 
                 AutomationId="home"
                 RowSpacing="0">
                 <Grid.RowDefinitions>
@@ -150,7 +152,6 @@
                     </Image>
                     <CarouselView
                         x:Name="Carousel"
-                        
                         ItemsSource="{Binding Notifications, Mode=OneWay}">
                         <CarouselView.ItemTemplate>
                             <DataTemplate>
@@ -160,7 +161,7 @@
                         </CarouselView.ItemTemplate>
                     </CarouselView>
                     <Image 
-                        Margin="0, 30, 0, 12"
+                        Margin="0, 80, 0, 12"
                         VerticalOptions="Start"
                         HorizontalOptions="Center"
                         HeightRequest="74"
@@ -178,40 +179,21 @@
                     IsVisible="{Binding HasBooking, Converter={StaticResource InverseBoolConverter}}"
                     ColumnSpacing="0"
                     RowSpacing="0"
-                    Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="5.5*" />
-                        <RowDefinition Height="4.5*" />
-                    </Grid.RowDefinitions>
+                    Grid.Row="1"
+                    ColumnDefinitions="*,*"
+                    RowDefinitions="5.5*,4.5*">
+                    
                     <!-- BOOK A ROOM -->
                     <Grid
                         Grid.Row="0"
-                        Grid.Column="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="75*" />
-                            <RowDefinition Height="25*" />
-                        </Grid.RowDefinitions>
+                        Grid.Column="0"
+                        RowDefinitions="75*,25*">
                         <Image 
                             Grid.Row="0"
                             Grid.RowSpan="2"
                             Aspect="AspectFill"
                             Source="img_1.png"
                             />
-                        <!-- <ffimageloading:CachedImage  -->
-                        <!--     Grid.Row="0" -->
-                        <!--     Grid.RowSpan="2" -->
-                        <!--     Aspect="AspectFill"> -->
-                        <!--     <ffimageloading:CachedImage.Source> -->
-                        <!--         <OnPlatform x:TypeArguments="ImageSource"> -->
-                        <!--             <On Platform="Android, iOS" Value="img_1" /> -->
-                        <!--             <On Platform="UWP" Value="Assets/img_1.png" /> -->
-                        <!--         </OnPlatform> -->
-                        <!--     </ffimageloading:CachedImage.Source> -->
-                        <!-- </ffimageloading:CachedImage> -->
                         <Grid   
                             Grid.Row="1"
                             BackgroundColor="{StaticResource OrangeColor}">
@@ -227,28 +209,13 @@
                     <!-- BOOK CONFERENCE ROOM -->
                     <Grid
                         Grid.Row="0"
-                        Grid.Column="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="75*" />
-                            <RowDefinition Height="25*" />
-                        </Grid.RowDefinitions>
+                        Grid.Column="1"
+                        RowDefinitions="75*,25*">
                         <Image 
                             Grid.Row="0"
                             Grid.RowSpan="2"
                             Source="img_2" 
                             Aspect="AspectFill"/>
-                        <!-- <ffimageloading:CachedImage   -->
-                        <!--     Grid.Row="0" -->
-                        <!--     Grid.RowSpan="2" -->
-                        <!--     Source="img_2"  -->
-                        <!--     Aspect="AspectFill"> -->
-                        <!--     <ffimageloading:CachedImage.Source> -->
-                        <!--         <OnPlatform x:TypeArguments="ImageSource"> -->
-                        <!--             <On Platform="Android, iOS" Value="img_2" /> -->
-                        <!--             <On Platform="UWP" Value="Assets/img_2.png" /> -->
-                        <!--         </OnPlatform> -->
-                        <!--     </ffimageloading:CachedImage.Source> -->
-                        <!-- </ffimageloading:CachedImage> -->
                         <Grid   
                             Grid.Row="1"
                             BackgroundColor="{StaticResource WhiteColor}">
@@ -265,11 +232,8 @@
                     <Grid
                         Grid.Row="1"
                         Grid.Column="0"
-                        BackgroundColor="{StaticResource WhiteColor}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="3*" />
-                            <RowDefinition Height="7*" />
-                        </Grid.RowDefinitions>
+                        BackgroundColor="{StaticResource WhiteColor}"
+                        RowDefinitions="3*,7*">
                         <StackLayout
                             Grid.Row="0"
                             Orientation="Horizontal">
@@ -302,15 +266,6 @@
                         RowSpacing="0">
                         <Image Aspect="AspectFill"
                                Source="img_3.png"/>
-                        <!-- <ffimageloading:CachedImage   -->
-                        <!--     Aspect="AspectFill"> -->
-                        <!--     <ffimageloading:CachedImage.Source> -->
-                        <!--         <OnPlatform x:TypeArguments="ImageSource"> -->
-                        <!--             <On Platform="Android, iOS" Value="img_3" /> -->
-                        <!--             <On Platform="UWP" Value="Assets/img_3.png" /> -->
-                        <!--         </OnPlatform> -->
-                        <!--     </ffimageloading:CachedImage.Source> -->
-                        <!-- </ffimageloading:CachedImage> -->
                     </Grid>
                 </Grid>
                 <!-- BOOKING -->
@@ -318,15 +273,9 @@
                     IsVisible="{Binding HasBooking}"
                     ColumnSpacing="0"
                     RowSpacing="0"
-                    Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="4.5*" />
-                        <RowDefinition Height="5.5*" />
-                    </Grid.RowDefinitions>
+                    Grid.Row="1"
+                    ColumnDefinitions="*,*"
+                    RowDefinitions="4.5*,5.5*">
                     <!-- ROOM TEMPERATURE -->
                     <Grid
                         Grid.Row="0"
@@ -344,12 +293,9 @@
                     <Grid
                         Grid.Row="0"
                         Grid.Column="1"
-                        BackgroundColor="{StaticResource ChartBackgroundColor}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-
+                        BackgroundColor="{StaticResource ChartBackgroundColor}"
+                        RowDefinitions="*,*">
+                        
                         <microcharts:ChartView Grid.Row="0" 
                                                Chart="{Binding LightChart}"
 											   Margin="16, 36, 16, 0" 
@@ -365,17 +311,6 @@
                             Margin="16, 12, 16, 6"
                             Source="be_green.png"
                             />
-                        <!-- <ffimageloading:CachedImage      -->
-                        <!--     Grid.Row="1" -->
-                        <!--     Aspect="AspectFit" -->
-                        <!--     Margin="16, 12, 16, 6"> -->
-                        <!--     <ffimageloading:CachedImage.Source> -->
-                        <!--         <OnPlatform x:TypeArguments="ImageSource"> -->
-                        <!--             <On Platform="Android, iOS" Value="be_green" /> -->
-                        <!--             <On Platform="UWP" Value="Assets/be_green.png" /> -->
-                        <!--         </OnPlatform> -->
-                        <!--     </ffimageloading:CachedImage.Source> -->
-                        <!-- </ffimageloading:CachedImage> -->
                         <microcharts:ChartView    
                             Grid.Row="1"
                             Chart="{Binding GreenChart}"
@@ -390,12 +325,8 @@
                     <Grid
                         Grid.Row="1"
                         Grid.Column="0"
-                        BackgroundColor="{StaticResource WhiteColor}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="3*" />
-                            <RowDefinition Height="7*" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
+                        BackgroundColor="{StaticResource WhiteColor}"
+                        RowDefinitions="3*,7*,Auto">
                         <StackLayout
                             Grid.Row="0"
                             Orientation="Horizontal">
@@ -436,25 +367,12 @@
                     <Grid
                         Grid.Row="1"
                         Grid.Column="1"
-                        RowSpacing="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
+                        RowSpacing="0"
+                        RowDefinitions="*,Auto">
                         <Image 
                             Grid.Row="0"
                             Aspect="AspectFill"
                             Source="img_3.png"/>
-                        <!-- <ffimageloading:CachedImage   -->
-                        <!--     Grid.Row="0" -->
-                        <!--     Aspect="AspectFill"> -->
-                        <!--     <ffimageloading:CachedImage.Source> -->
-                        <!--         <OnPlatform x:TypeArguments="ImageSource"> -->
-                        <!--             <On Platform="Android, iOS" Value="img_3" /> -->
-                        <!--             <On Platform="UWP" Value="Assets/img_3.png" /> -->
-                        <!--         </OnPlatform> -->
-                        <!--     </ffimageloading:CachedImage.Source> -->
-                        <!-- </ffimageloading:CachedImage> -->
                         <Grid   
                             Grid.Row="1"
                             Style="{StaticResource BookConferencePanel2Style}">
