--- a/Source/SmartHotel.Clients/SmartHotel.Clients/Views/MainView.xaml
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/Views/MainView.xaml
@@ -1,20 +1,21 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:SmartHotel.Clients.Core.Views"
+    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    ios:Page.UseSafeArea="False"
+    ios:NavigationPage.IsNavigationBarTranslucent="True"
     x:Class="SmartHotel.Clients.Core.Views.MainView"
     FlyoutLayoutBehavior="Popover"
     Title="SmartHotel"
-    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-    ios:Page.UseSafeArea="False">
+    >
     <FlyoutPage.Flyout>
         <views:MenuView
             BindingContext="{Binding MenuViewModel}"/>
     </FlyoutPage.Flyout>
     <FlyoutPage.Detail>
         <ContentPage 
-            ios:Page.UseSafeArea="False"
             BackgroundColor="Transparent" />
     </FlyoutPage.Detail>
 </FlyoutPage>
